--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -12,6 +12,7 @@
   <link rel="manifest" href="manifest.json">
   <link rel="shortcut icon" href="">
   <meta name="description" content="">
+  <meta http-equiv=Content-Security-Policy content="connect-src self ws://*:* wss://192.168.1.158:* https: http:">
 
   <meta property="og:title" content="MERN Boilerplate">
   <meta property="og:description" content="">
